# pluma

./: index.html  meson.build  meson_options.txt
2022-12-27-114335-6568-1@1b61ee63b2f4_plugin-tmpl/: index.html  report-008555.html  report-13aee1.html  report-1e519c.html  report-222690.html  report-4a60ca.html  report-527848.html  report-5f782a.html  report-6583f3.html  report-6c7faf.html  report-731a91.html  report-7b3428.html  report-a608c3.html  report-b8f564.html  report-cf3974.html  report-efdf48.html  report-f2c91f.html
2022-12-27-114655-8509-cppcheck@1b61ee63b2f4_plugin-tmpl/: 63.html  index.html
pluma/: meson.build
pluma/dialogs/: meson.build
